# Chess

./: CMakeLists.txt  README.md  main.cpp
benchmarks/: CMakeLists.txt  board_benchmark.cpp  main.cpp  smart_ai_player_benchmark.cpp
documents/: chess_ai_design.md
resources/textures/: pieces.pyxel
src/: CMakeLists.txt  agent.h  constants.h  data_types.h  event.h  factory.h  piece_factory.h  state.h  utils.cpp  utils.h
src/behaviors/: behavior.h  multi_behavior.h  piece_translation_behavior.h
src/entity/: board_entity.h  entity.h  piece_entity.h  stateful_entity.h
src/players/: autonomous_player.h  player.h  random_move_ai_player.h  smart_ai_player.h
src/pure_states/: board.cpp  board.h
src/receivers/: multi_receiver.h  piece_drag_receiver.h  receiver.h
src/renderers/: board_renderer.h  multi_renderer.h  piece_renderer.h  renderer.h  shape_renderer.h
src/scorers/: aggregate_scorer.h  center_scorer.h  checkmate_scorer.h  control_scorer.h  development_scorer.h  material_scorer.h  rim_scorer.h  scorer.h
src/state/: board_state.h  piece_state.h
tests/: CMakeLists.txt
tests/lib/googletest/: CONTRIBUTING.md
tests/lib/googletest/googlemock/scripts/generator/: LICENSE
tests/unit_tests/: CMakeLists.txt  board_tests.cpp  smart_ai_tests.cpp  utils_tests.cpp
